--- a/jellyfin-rpc/Cargo.toml
+++ b/jellyfin-rpc/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name        = "jellyfin-rpc"
-version     = "1.2.2"
+version     = "1.2.1"
 edition     = "2021"
 description = "Backend for the Jellyfin-RPC-cli and Jellyfin-RPC-Iced projects"
 license     = "GPL-3.0-or-later"
@@ -8,7 +8,7 @@ repository  = "https://github.com/Radiicall/jellyfin-rpc"
 keywords     = ["jellyfin", "discord", "rich-presence"]
 
 [dependencies]
-discord-rich-presence = "0.2"
+discord-rich-presence = { git = "https://github.com/Radiicall/discord-rich-presence" }
 serde_json            = "1.0"
 log                   = "0.4"
 url                   = "2.5"
